--- a/app/src/main/res/layout/activity_create_bank.xml
+++ b/app/src/main/res/layout/activity_create_bank.xml
@@ -72,152 +72,111 @@
             android:animateLayoutChanges="true"
             android:layout_marginBottom="20dp">
 
-
-            <RelativeLayout
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/TextInputLayoutStyle"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:background="@color/white"
+                android:layout_height="60dp"
+                android:layout_marginStart="10dp"
                 android:layout_marginTop="10dp"
-                android:paddingStart="10dp"
-                android:paddingEnd="10dp">
-
-                <TextView
-                    android:id="@+id/title_award"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:text="Account Title"
-                    android:textColor="@color/black"
-                    android:textSize="16sp" />
+                android:layout_marginEnd="10dp"
+                android:fitsSystemWindows="true"
+                android:hint="Account Title"
+                android:textColorHint="@color/black"
+                app:boxStrokeColor="@color/ThemeColor"
+                app:errorEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/editText_Name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginStart="223dp"
-                    android:background="@android:color/transparent"
-                    android:gravity="end"
-                    android:hint="Enter Title"
-                    android:inputType="textPersonName|textCapWords"
-                    android:lines="1"
-                    android:textSize="16sp" />
-
-            </RelativeLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/viewGrey"/>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:background="@color/white"
-                android:paddingStart="10dp"
-                android:paddingEnd="10dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:text="Account No"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:inputType="text"
+                    android:maxLines="1"
                     android:textColor="@color/black"
-                    android:textSize="16sp" />
+                    android:textSize="14sp" />
+
+            </com.google.android.material.textfield.TextInputLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/TextInputLayoutStyle"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:fitsSystemWindows="true"
+                android:hint="Account No"
+                android:textColorHint="@color/black"
+                app:boxStrokeColor="@color/ThemeColor"
+                app:errorEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/edtAccountNo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginStart="223dp"
-                    android:background="@android:color/transparent"
-                    android:gravity="end"
-                    android:hint="Enter Account No"
-                    android:inputType="numberDecimal"
-                    android:lines="1"
-                    android:textSize="16sp" />
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:inputType="text"
+                    android:maxLines="1"
+                    android:textColor="@color/black"
+                    android:textSize="14sp" />
 
-            </RelativeLayout>
+            </com.google.android.material.textfield.TextInputLayout>
 
-            <View
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/viewGrey"/>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:background="@color/white"
-                android:paddingStart="10dp"
-                android:paddingEnd="10dp">
+                android:layout_height="60dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/create_general_edt_background">
 
                 <TextView
+                    android:id="@+id/tvBank"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
+                    android:layout_marginStart="15dp"
                     android:text="Bank"
                     android:textColor="@color/black"
-                    android:textSize="16sp" />
+                    android:textSize="15sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_goneMarginStart="10dp" />
 
-                <TextView
+                <ImageView
                     android:id="@+id/bank"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginStart="223dp"
-                    android:background="@android:color/transparent"
-                    android:gravity="end"
-                    android:hint="Enter Bank"
-                    android:lines="1"
-                    android:textSize="16sp" />
+                    android:layout_gravity="end"
+                    android:layout_marginEnd="10dp"
+                    android:src="@drawable/drop_down_icon"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
 
-            </RelativeLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <View
+            <com.google.android.material.textfield.TextInputLayout
+                style="@style/TextInputLayoutStyle"
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/viewGrey"/>
-
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:background="@color/white"
-                android:paddingStart="10dp"
-                android:paddingEnd="10dp">
-
-                <TextView
-                    android:id="@+id/budget"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_centerVertical="true"
-                    android:text="Branch"
-                    android:textColor="@color/black"
-                    android:textSize="16sp" />
+                android:layout_height="60dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="10dp"
+                android:fitsSystemWindows="true"
+                android:hint="Account No"
+                android:textColorHint="@color/black"
+                app:boxStrokeColor="@color/ThemeColor"
+                app:errorEnabled="true">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/editText_budget"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:layout_marginStart="223dp"
-                    android:background="@android:color/transparent"
-                    android:gravity="end"
-                    android:hint="Enter Branch"
-                    android:inputType="numberDecimal"
-                    android:lines="1"
-                    android:textSize="16sp" />
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:inputType="text"
+                    android:maxLines="1"
+                    android:textColor="@color/black"
+                    android:textSize="14sp" />
 
-            </RelativeLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/viewGrey"/>
+            </com.google.android.material.textfield.TextInputLayout>
 
 
             <Button
