--- a/app/src/main/res/layout/row_item_bank.xml
+++ b/app/src/main/res/layout/row_item_bank.xml
@@ -1,12 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/bg"
-    android:orientation="vertical">-->
-
-<androidx.cardview.widget.CardView android:id="@+id/card"
+    android:id="@+id/card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_below="@+id/relative"
@@ -14,32 +9,27 @@
     android:layout_marginTop="5dp"
     android:layout_marginEnd="20dp"
     android:layout_marginBottom="10dp"
-    app:cardCornerRadius="5dp"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    app:cardCornerRadius="5dp">
 
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="10dp"
-            android:textStyle="bold"
-            android:text="Account Title"
-            android:textColor="@color/black"
-            android:textSize="17sp" />
+    <TextView
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="10dp"
+        android:text="Account Title"
+        android:textColor="@color/black"
+        android:textSize="17sp"
+        android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/bank"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="35dp"
-            android:paddingBottom="10dp"
-            android:text="Peter Dan"
-            android:textSize="15sp" />
+    <TextView
+        android:id="@+id/bank"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="35dp"
+        android:paddingBottom="10dp"
+        android:text="Peter Dan"
+        android:textSize="15sp" />
 
-    </androidx.cardview.widget.CardView>
-
-<!--
-</LinearLayout>-->
+</androidx.cardview.widget.CardView>
