--- a/app/src/main/res/layout/activity_create_address_data.xml
+++ b/app/src/main/res/layout/activity_create_address_data.xml
@@ -382,6 +382,7 @@
                     android:layout_height="100dp"
                     android:layout_marginStart="10dp"
                     android:layout_marginTop="10dp"
+                    android:visibility="gone"
                     android:layout_marginEnd="10dp"
                     android:background="@drawable/create_general_edt_background"
                     android:orientation="vertical">
