--- a/app/src/main/res/layout/fragment_responsible.xml
+++ b/app/src/main/res/layout/fragment_responsible.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical"
     android:background="@drawable/bg"
     android:layout_height="match_parent"
-    tools:context=".fragments.ResponsibleFragment">
+    tools:context=".fragments.CustomerDataFormFragments.ResponsibleFragment">
 
     <com.google.android.material.textfield.TextInputLayout
         style="@style/TextInputLayoutStyle"
