--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
-    <group android:checkableBehavior="single">
+ <!--   <group android:checkableBehavior="single">-->
         <item
             android:id="@+id/nav_home"
             android:title="Home"/>
@@ -46,7 +46,7 @@
             android:id="@+id/nav_travelRequest"
             android:title="Travel Request" />
 
-    </group>
+    <!--</group>-->
 
 </menu>
 
