--- a/app/src/main/res/layout/activity_create_item_selection.xml
+++ b/app/src/main/res/layout/activity_create_item_selection.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:background="@drawable/bg"
     android:layout_height="match_parent"
-    tools:context=".fragments.CustomerDataFormFragments.CreateItemSelectionActivity">
+    tools:context=".CreateItemSelectionActivity">
 
     <ScrollView
         android:layout_width="match_parent"
