--- a/app/src/main/res/layout/fragment_general_odf.xml
+++ b/app/src/main/res/layout/fragment_general_odf.xml
@@ -305,9 +305,9 @@
 
                 <TextView
                     android:id="@+id/tvShowOrderStatus"
-                    android:layout_width="25dp"
-                    android:layout_height="12dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
                     android:text="Open"
                     android:textSize="12sp"
                     app:layout_constraintStart_toStartOf="@+id/tvOrderStatus"
