--- a/app/src/main/res/layout/fragment_item_selection.xml
+++ b/app/src/main/res/layout/fragment_item_selection.xml
@@ -19,7 +19,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_weight="1"
+            android:layout_weight="2"
             android:gravity="center"
             android:text="Add Item"
             android:textColor="@color/black"
@@ -40,6 +40,7 @@
         android:id="@+id/recyclerViewItemSelection"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        tools:listitem="@layout/rvitem_selected_item"
         android:layout_marginTop="70dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
