--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,44 +5,55 @@
 
  <!--   <group android:checkableBehavior="single">-->
         <item
+            android:icon="@drawable/ic_home"
             android:id="@+id/nav_home"
             android:title="Home"/>
         <item
+            android:icon="@drawable/ic_salary_slip"
             android:id="@+id/nav_salarySlip"
             android:title="Salary Slip" />
         <item
+            android:icon="@drawable/ic_leaverequest"
             android:id="@+id/nav_leaveRequest"
             android:title="Leave Request" />
 
         <item
+            android:icon="@drawable/ic_expense_claim"
             android:id="@+id/nav_expenseClaim"
             android:title="Expense Claim" />
 
         <item
+            android:icon="@drawable/ic_orderdataform"
             android:id="@+id/nav_orderDataFrom"
             android:title="Order Data From" />
 
         <item
+            android:icon="@drawable/ic_customerdataform"
             android:id="@+id/nav_CDF"
             android:title="Customer Data From" />
 
         <item
+            android:icon="@drawable/ic_orderpayment"
             android:id="@+id/nav_orderPayment"
             android:title="Order Payment" />
 
         <item
+            android:icon="@drawable/ic_productliterature"
             android:id="@+id/nav_productLiterature"
             android:title="Product Literature" />
 
         <item
+            android:icon="@drawable/ic_memo"
             android:id="@+id/nav_memo"
             android:title="Memo" />
 
         <item
+            android:icon="@drawable/ic_medical"
             android:id="@+id/nav_medical"
             android:title="Medical" />
 
         <item
+            android:icon="@drawable/ic_travel_request"
             android:id="@+id/nav_travelRequest"
             android:title="Travel Request" />
 
