--- a/app/src/main/res/layout/fragment_compliance.xml
+++ b/app/src/main/res/layout/fragment_compliance.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/bg"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragments.CustomerDataFormFragments.OrderDataFormFragment.ComplianceFragment">
+    tools:context=".fragments.customerDataFormFragments.orderDataFormFragment.ComplianceFragment">
 
     <TextView
         android:id="@+id/upload_ntn_tv"
