--- a/app/src/main/res/layout/fragment_item_selection.xml
+++ b/app/src/main/res/layout/fragment_item_selection.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:background="@drawable/bg"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".fragments.CustomerDataFormFragments.OrderDataFormFragment.ItemSelectionFragment">
+    tools:context=".fragments.customerDataFormFragments.orderDataFormFragment.ItemSelectionFragment">
 
     <LinearLayout
         android:id="@+id/linearLayout2"
