--- a/app/src/main/res/layout/activity_create_item_selection.xml
+++ b/app/src/main/res/layout/activity_create_item_selection.xml
@@ -30,6 +30,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="20dp"
+                    android:visibility="gone"
                     android:src="@drawable/baseline_menu"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
